<resources>
    <string name="app_name">Donation Tracker v1</string>
    <string name="donation_tracker">Donation Tracker</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="don_t_have_an_account_create_one">Don\'t have an account? Create One!</string>
    <string name="logo">logo</string>
    <string name="fillerImage">fillerImage</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in!</string>
    <string name="item_name">Item Name</string>
    <string name="add_donation_item">Add Donation Item</string>
    <string name="todo1">TODO</string>
    <string name="value">Value*</string>
    <string name="short_description">Short Description*</string>
    <string name="a_short_title_or_label_for_the_product">
        A short title or label for the product</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="name">Name</string>
    <string name="productValue">$</string>
    <string name="this_is_a_short_description">This is a short description</string>
    <string name="full_description">Full Description*</string>
    <string name="category">Category*</string>
    <string name="this_is_a_long_description_of_the_product">
        This is a long description of the product</string>
    <string name="march_5_2018">March 5, 2018</string>
    <string name="comments">Comments</string>
    <string name="add_item">Add Item</string>
    <string name="_404_imaginary_drive_ironic_city_neptune">
        404 Imaginary Drive, Ironic City, Neptune</string>
    <string name="_12_00am">12:00AM</string>
    <string name="location">Location*</string>
    <string name="time_of_drop_off">Time of Drop Off*</string>
    <string name="query">query</string>
    <string name="search_filters">Search Filters:</string>
    <string name="explore">EXPLORE</string>
    <string name="filter_string_todo1">filter @string/todo1</string>
    <string name="hats">Hats</string>
    <string name="household">Household</string>
    <string name="other">Other</string>
    <string name="electronics">Electronics</string>
    <string name="clothing">Clothing</string>
    <string name="kitchen">Kitchen</string>
    <string name="title_activity_maps">Map</string>
</resources>
