<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.AddItemActivity">

    <ImageView
        android:id="@+id/pageDecalImage"
        android:layout_width="411dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/searchbargreen"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/fillerImageEntry"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imagecontainertemp" />

    <TextView
        android:id="@+id/addDonationItemScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="32dp"
        android:text="@string/add_donation_item"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/shortDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:text="@string/short_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fullDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/full_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categorySpinner" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/location"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullDescriptionEntry" />

    <TextView
        android:id="@+id/timeOfDropOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/time_of_drop_off"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationSpinner" />

    <TextView
        android:id="@+id/comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/comments"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeOfDropOffTimeEntry" />

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/category"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valueEntry" />

    <TextView
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shortDescriptionEntry" />

    <EditText
        android:id="@+id/shortDescriptionEntry"
        android:layout_width="230dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/this_is_a_short_description"
        android:textColor="@android:color/darker_gray"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shortDescription" tools:targetApi="o"/>

    <EditText
        android:id="@+id/fullDescriptionEntry"
        android:layout_width="375dp"
        android:layout_height="41dp"
        android:layout_marginStart="15dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/this_is_a_long_description_of_the_product"
        android:textColor="@android:color/darker_gray"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullDescription"
        tools:targetApi="o" />

    <Spinner
        android:id="@+id/locationSpinner"
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location" />

    <EditText
        android:id="@+id/valueEntry"
        android:layout_width="93dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/productValue"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeOfDropOff"
        app:srcCompat="@drawable/timeicon" />

    <EditText
        android:id="@+id/timeOfDropOffTimeEntry"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="time"
        android:text="@string/_12_00am"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/timeOfDropOff" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="143dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeOfDropOff"
        app:srcCompat="@drawable/calendaricon" />

    <EditText
        android:id="@+id/timeOfDropOffDateEntry"
        android:layout_width="217dp"
        android:layout_height="40dp"
        android:layout_marginStart="172dp"
        android:ems="10"
        android:inputType="date"
        android:text="@string/march_5_2018"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeOfDropOff"
        android:autofillHints="" />

    <EditText
        android:id="@+id/commentsEntry"
        android:layout_width="375dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comments" />

    <Button
        android:id="@+id/addItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="27dp"
        android:text="@string/add_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/exitAddItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:src="@drawable/closeicon"
        app:layout_constraintBottom_toBottomOf="@+id/pageDecalImage"
        app:layout_constraintEnd_toEndOf="@+id/pageDecalImage"
        app:layout_constraintTop_toTopOf="@+id/pageDecalImage" />

</android.support.constraint.ConstraintLayout>